<resources>
    <string name="app_name">A Novel Idea</string>
    <string name="title">Book Title</string>
    <string name="author">Author</string>
    <string name="genre">Genre</string>
    <string name="unk">Unknown Genre</string>
    <string name="humor">Humor</string>
    <string name="fantasy">Fantasy</string>
    <string name="adventure">Action&#92;Adventure</string>
    <string name="mystery">Mystery</string>
    <string name="scifi">Science Fiction</string>
    <string name="drama">Drama</string>
    <string name="romance">Romance</string>
    <string name="horror">Horror</string>
    <string name="nonfiction">Non-Fiction</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="phone">Phone</string>
    <string name="empty_text">No Inventory!</string>
    <string name="empty_addbook">Add a book using the button below.</string>
    <string name="add_dummy">Add Dummy Data</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="bookInfo">Book Information: </string>
    <string name="genreInfo">Genre: </string>
    <string name="addBook">Add Book</string>
    <string name="editBook">Edit Book</string>
    <string name="deleteBookMsg">Delete Book</string>
    <string name="updateQty">Update quantity for </string>
    <string name="successful"> Successful.</string>
    <string name="unsuccessful"> Unsuccessful. Please Try Again.</string>
    <string name="discardChanges">Discard changes?</string>
    <string name="discard">Discard</string>
    <string name="keep">Keep Editing</string>
    <string name="deleteBook">Do you wish to delete this book?</string>
    <string name="cancel">Cancel</string>
    <string name="callSupplier">Call Supplier</string>
    <string name="unknownUri">Unknown Uri</string>
    <string name="unsupported">Unsupported Insertion for </string>
    <string name="missingNothing">Missing Nothing.</string>
    <string name="addFailed">Add Failed, </string>
    <string name="missingTitle">Missing Title.</string>
    <string name="missingAuthor">Missing Author.</string>
    <string name="missingPrice">Missing Price.</string>
    <string name="missingQty">Missing Quantity.</string>
    <string name="missingSupplier">Missing Supplier.</string>
    <string name="missingSupplierPhone">Missing Supplier Phone.</string>
    <string name="insertionFailed">Insertion failed for row: </string>
    <string name="unsupportedDelete">Delete Unsupported for </string>
    <string name="qtyError">Quantity cannot be less than 0.</string>
    <string name="dummyData">Dummy Data inserted!</string>
    <string name="dummyDataFailed">Inserting dummy data failed. Please try again.</string>
    <string name="sale">Sale</string>
    <string name="invalidPhoneNumber">Phone number invalid. Please ensure the field is correct and try again.</string>

</resources>
