<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorLight"
    android:orientation="horizontal"
    android:padding="@dimen/activity_margin">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_gravity="top"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/listpadding">

        <ImageView
            style="@style/bookStyle"
            android:src="@mipmap/ic_book" />

        <Button
            android:id="@+id/saleButton"
            style="@style/buttonStyle"
            android:focusable="false"
            android:text="@string/sale" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/listpadding"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/textDark"
            tools:text="@string/title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/authorLabel"
                    style="@style/listItemStyle"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/priceLabel"
                    style="@style/listItemStyle"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/qtyLabel"
                    style="@style/listItemStyle"
                    android:text="@string/qty" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/author"
                    style="@style/listItemStyle"
                    tools:text="@string/author" />

                TextView
                android:id="@+id/genre"
                style="@style/listItemStyle"
                tools:text="@string/genre" />

                <TextView
                    android:id="@+id/price"
                    style="@style/listItemStyle"
                    tools:text="@string/price" />

                <TextView
                    android:id="@+id/qty"
                    style="@style/listItemStyle"
                    tools:text="@string/qty" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>